--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -12,10 +12,24 @@ body {
     font-size: 50px;
     &__back {
       color:#aaa;
+      cursor: pointer;
+      &:hover {
+        color:#ccc;
+      }
+      &--hide {
+        color:$bg-color;
+      }
     }
     &__btn {
        color:rgb(121, 138, 32);
        font-size: 18px;
+       cursor: pointer;
+       &-icon {
+         font-size: 22px;
+       }
+       &:hover {
+         color: lighten(rgb(121, 138, 32), 5%);
+       }
     }
   }
   &-color {
