--- a/src/app/styles/icomoon/style.css
+++ b/src/app/styles/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?8uco8l');
-  src:  url('fonts/icomoon.eot?8uco8l#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?8uco8l') format('truetype'),
-    url('fonts/icomoon.woff?8uco8l') format('woff'),
-    url('fonts/icomoon.svg?8uco8l#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?9me643');
+  src:  url('fonts/icomoon.eot?9me643#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?9me643') format('truetype'),
+    url('fonts/icomoon.woff?9me643') format('woff'),
+    url('fonts/icomoon.svg?9me643#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-database:before {
+  content: "\e903";
+}
 .icon-pause-circle:before {
   content: "\e900";
 }
