--- a/src/app/styles/icomoon/style.css
+++ b/src/app/styles/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9me643');
-  src:  url('fonts/icomoon.eot?9me643#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9me643') format('truetype'),
-    url('fonts/icomoon.woff?9me643') format('woff'),
-    url('fonts/icomoon.svg?9me643#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?n6vnpt');
+  src:  url('fonts/icomoon.eot?n6vnpt#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?n6vnpt') format('truetype'),
+    url('fonts/icomoon.woff?n6vnpt') format('woff'),
+    url('fonts/icomoon.svg?n6vnpt#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-forkandspoon:before {
+  content: "\e905";
+}
+.icon-forkandknife:before {
+  content: "\e906";
+}
 .icon-database:before {
   content: "\e903";
 }
