--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -1,6 +1,6 @@
 $bg-color:rgb(18, 62, 60);
 $primary-color:rgb(57, 122, 109);
-$font-family:'Courier New', Courier, monospace;
+$font-family:'Courier New', Courier, Helvetica, serif;
 body {
   font-family: $font-family;
   font-weight: 400;
